# gitlab_autobot

./: .gitignore  README.md  pyproject.toml
scripts/: start-mcp.sh
src/gitlab_autobot/: __init__.py  __main__.py  cli.py  config.py  gitlab.py  mcp_server.py
