[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-autobot"
version = "0.1.0"
description = "CLI and MCP server to create GitLab merge requests."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "GitLab Autobot" }
]
dependencies = [
  "requests>=2.31",
  "openai>=1.30.0",
  "mcp>=1.0.0",
]

[project.scripts]
gitlab-autobot = "gitlab_autobot.cli:main"
gitlab-autobot-mcp = "gitlab_autobot.mcp_server:main"

[tool.setuptools.package-data]
"gitlab_autobot" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]
